# simple-minify-html

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: pipeline.yml
minify-html/: Cargo.toml
minify-html-common/: Cargo.toml  build.rs
minify-html-common/src/spec/: script.rs
minify-html-common/src/spec/tag/: omission.rs  void.rs  whitespace.rs
minify-html-common/src/tests/: mod.rs
minify-html-onepass/: Cargo.toml
minify-html-onepass/src/: err.rs  lib.rs
minify-html-onepass/src/cfg/: mod.rs
minify-html-onepass/src/proc/: checkpoint.rs  entity.rs  mod.rs  range.rs
minify-html-onepass/src/tests/: mod.rs
minify-html-onepass/src/unit/: bang.rs  comment.rs  content.rs  instruction.rs  script.rs  style.rs  tag.rs
minify-html-onepass/src/unit/attr/: mod.rs  value.rs
minify-html/src/: lib.rs
minify-html/src/ast/: c14n.rs  mod.rs
minify-html/src/entity/: decode.rs  encode.rs
minify-html/src/minify/: attr.rs  content.rs  css.rs  element.rs  js.rs  rcdata.rs
minify-html/src/minify/tests/: attr.rs
minify-html/src/parse/: bang.rs  comment.rs  content.rs  doctype.rs  element.rs  instruction.rs  mod.rs  script.rs  style.rs  textarea.rs  title.rs
minify-html/src/parse/tests/: element.rs
minify-html/src/tag/: mod.rs
minify-html/src/tests/: mod.rs
src/: lib.rs  pattern.rs  whitespace.rs
src/ast/: c14n.rs  mod.rs
src/cfg/: mod.rs
src/entity/: decode.rs  encode.rs
src/entity/tests/: encode.rs
src/minify/: attr.rs  content.rs  css.rs  doctype.rs  element.rs  js.rs  rcdata.rs
src/minify/tests/: attr.rs
src/parse/: content.rs  doctype.rs  element.rs  mod.rs  script.rs  style.rs  textarea.rs  title.rs
src/parse/tests/: element.rs
src/spec/: script.rs
src/spec/tag/: omission.rs  void.rs  whitespace.rs
src/tests/: helpers.rs  mod.rs
