[package]
name = "simple-minify-html"
description = "Extremely fast and smart HTML + JS + CSS minifier"
license = "MIT"
homepage = "https://github.com/sondr3/simple-minify-html"
readme = "README.md"
keywords = ["html", "compress", "minifier", "js", "css"]
categories = ["compression", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/sondr3/simple-minify-html.git"
version = "0.15.0"
authors = ["Wilson Lin <code@wilsonl.in>", "Sondre Aasemoen <sondre@eons.io>"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
css = ["dep:lightningcss"]
js = ["dep:oxc_minifier", "oxc_allocator", "oxc_codegen", "oxc_mangler", "oxc_parser", "oxc_span"]

[dependencies]
ahash = "0.8.6"
aho-corasick = "1.1"
lightningcss = { version = "1.0.0-alpha.63", optional = true }
memchr = "2"
oxc_minifier = { version = "0.51.0", optional = true }
oxc_allocator = { version = "0.51.0", optional = true }
oxc_codegen = { version = "0.51.0", optional = true }
oxc_mangler = { version = "0.51.0", optional = true }
oxc_parser = { version = "0.51.0", optional = true }
oxc_span = { version = "0.51.0", optional = true }

[build-dependencies]
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
