[package]
name = "simple-minify-html"
description = "Extremely fast and smart fork of minify-html"
license = "MIT"
homepage = "https://github.com/sondr3/simple-minify-html"
readme = "README.md"
keywords = ["html", "compress", "minifier", "js", "css"]
categories = ["compression", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/sondr3/simple-minify-html.git"
version = "0.15.0"
authors = ["Wilson Lin <code@wilsonl.in>", "Sondre Aasemoen <sondre@eons.io>"]
edition = "2021"

[badges]
maintenance = { status = "experimental" }

[features]
css = ["dep:lightningcss"]
js = ["dep:oxc_minifier", "oxc_allocator", "oxc_codegen", "oxc_mangler", "oxc_parser", "oxc_span"]

[dependencies]
aho-corasick = "1.1"
lightningcss = { version = "1.0.0-alpha.63", optional = true }
memchr = "2"
oxc_minifier = { version = "0.51.0", optional = true }
oxc_allocator = { version = "0.51.0", optional = true }
oxc_codegen = { version = "0.51.0", optional = true }
oxc_mangler = { version = "0.51.0", optional = true }
oxc_parser = { version = "0.51.0", optional = true }
oxc_span = { version = "0.51.0", optional = true }
rustc-hash = "2.1.1"

[build-dependencies]
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
