[package]
name = "simple-minify-html-common"
description = "Common code and data for minify-html*"
license = "MIT"
homepage = "https://github.com/sondr3/simple-minify-html"
repository = "https://github.com/sondr3/simple-minify-html.git"
version = "0.0.2"
authors = ["Wilson Lin <code@wilsonl.in>", "Sondre Aasemoen <sondre@eons.io>"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ahash = "0.8.6"
aho-corasick = "1.1"
memchr = "2"

[build-dependencies]
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
